fix table alignment for RTL

--- a/examples/table/table.css
+++ b/examples/table/table.css
@@ -48,6 +48,9 @@
 .tableFlush.tableBorder tr th:first-child, .tableFlush.tableBorder tr td:first-child {
     border-left: none
 }
+html[dir=rtl] .table tr th, html[dir=rtl] .table tr td {
+    text-align: right
+}
 @media (max-width: 1200px) {
     .tableResponsive {
         overflow-x: auto;
